--- a/Resources/library.bib
+++ b/Resources/library.bib
@@ -18,6 +18,7 @@
 	author = {Axler, S.},
 	year = {2019},
 }
+
 @book{stein_weiss,
  ISBN = {9780691080789},
  URL = {http://www.jstor.org/stable/j.ctt1bpm9w6},
@@ -58,4 +59,64 @@ The Princeton Lectures in Analysis represents a sustained effort to introduce th
  title = {Functional Analysis: Introduction to Further Topics in Analysis},
  urldate = {2025-05-27},
  year = {2003}
+}
+
+@book{Ahlfors1966,
+  AUTHOR = {Ahlfors, L. V.},
+  PUBLISHER = {McGraw-Hill Book Company},
+  DATE = {1966},
+  EDITION = {2},
+  SUBTITLE = {An introduction to the theory of analytic functions of one complex variable},
+  TITLE = {Complex Analysis},
+}
+
+@book{evans,
+  title={Partial Differential Equations},
+  author={Evans, L.C.},
+  isbn={9780821849743},
+  lccn={2009044716},
+  series={Graduate studies in mathematics},
+  url={https://books.google.fi/books?id=Xnu0o_EJrCQC},
+  year={2010},
+  publisher={American Mathematical Society}
+}
+@book{John1978,
+author="John, Fritz",
+title="Partial Differential Equations",
+year="1978",
+publisher="Springer US",
+address="New York, NY",
+isbn="978-1-4684-0059-5",
+doi="10.1007/978-1-4684-0059-5",
+url="https://doi.org/10.1007/978-1-4684-0059-5"
+}
+
+@book{hilbert,
+author={Courant, R. and Hilbert, D.},
+publisher = {John Wiley & Sons, Ltd},
+isbn = {9783527617234},
+title = {Methods of Mathematical Physics: Volume II Partial Differential Equations},
+doi = {https://doi.org/10.1002/9783527617234.fmatter},
+url = {https://onlinelibrary.wiley.com/doi/abs/10.1002/9783527617234.fmatter},
+eprint = {https://onlinelibrary.wiley.com/doi/pdf/10.1002/9783527617234.fmatter},
+year = {1989}
+}
+
+@book{Nevalinna,
+publisher = {AMS Chelsea Publishing: An Imprint of the American Mathematical Society},
+isbn={978-0821843994},
+author={Nevanlinna, Rolf and Paatero, Veikko},
+title={Introduction to Complex Analysis},
+edition={2},
+year={1982}
+}
+
+@book{Conway,
+author={Conway, John B.},
+title={Functions of One Complex Variable I},
+publisher={Springer New York, NY},
+isbn={978-0-387-90328-6},
+year={1978},
+edition={2},
+doi={https://doi.org/10.1007/978-1-4612-6313-5}
 }
