--- a/Sections/Conclusion.tex
+++ b/Sections/Conclusion.tex
@@ -1,3 +1,3 @@
-This concludes the results in the upper half space with tangential convergence to the function. Together, the theorems \ref{thm:21a} \& \ref{thm:2.3} show that there exists an extension of the function $L^p(\RR^n)$ or the Borel measure $\mathcal M(\RR^n)$ to the half-space $\RR^{n+1}_+$ that solves the Laplace equation and thus is harmonic. Theorem \ref{thm:21b} also shows that the result can be strengthened by having stronger assumptions about the regularity of the boundary data. 
+This concludes the results in the upper half space with tangential convergence to a function or measure. Together, theorems \ref{thm:21a} \& \ref{thm:2.3} show that there exists an extension of a function $L^p(\RR^n)$ or a Borel measure $\mathcal M(\RR^n)$ to the half-space $\RR^{n+1}_+$ that solves the Laplace equation and thus is harmonic. Theorem \ref{thm:21b} also shows that the result can be strengthened by having stronger assumptions about the regularity of the boundary data.
 
-These results are only a first step to the results that could be further generalized. One possibility is to consider other paths to the boundary that do not necessarily approach it tangentially. Stein and Weiss are also considering this case in their book \cite{stein_weiss}. In this case, the analysis becomes more complicated and requires some tools that were not used for the theorems introduced in this thesis. In particular, this would require the use of maximal functions to obtain certain bounds to establish the result in the non-tangential case. Other possible extensions could include changing the domain in which the problem is set. Also, the differential equation could be changed from the Laplace equation to some other equation.
+These results are only a first step to the results that could be further generalized. One possibility is to consider other paths to the boundary that do not necessarily approach it tangentially. Stein and Weiss are also considering this scenario in their book \cite{stein_weiss}. With a nontangential convergence path, the analysis becomes more complicated and requires some tools that were not used for the theorems introduced in this thesis. In particular, this would require the use of maximal functions to obtain certain bounds to establish the result in the non-tangential case. Other possible extensions could include changing the domain in which the problem is set. Also, the differential equation could be changed from the Laplace equation to some other partial differential equation.
