--- a/mat-thesis-template.tex
+++ b/mat-thesis-template.tex
@@ -67,7 +67,7 @@ Santeri Väätäjä
 \vfill\hrule\vspace{4pt}
 
 \noindent
-Supervisor:\hfill Month and year of submission\\
+Supervisor:\hfill June 2025\\
 Petri Ola\\
 \end{titlepage}
 
@@ -79,9 +79,29 @@ Petri Ola\\
 \pagenumbering{gobble}
 \cleardoublepage
 
+\noindent\textbf{Otsikko:} Harmoninen laajennus puoliavaruuteen\\ % Otsikko / Titel
+\textbf{Kirjoittaja:} Santeri Väätäjä\\ % Tekijä / Författare
+\textbf{Vuosi ja kuukausi:} Kesäkuu 2025\\ % Aika / Datum
+\textbf{Sivumäärä:} \pageref*{LastPage}~s.\\[1em] % Sivumäärä: XX~s. / Sidoantal: XX~s.
+% The page count is updated automatically, but it might require two compilations to be correct.
+% If you customize the backmatter, this might become incorrect - check and correct manually if needed.
+
+% If you include an abstract in a different language, wrap it in a foreignlanguage block
+\noindent\textbf{Tiivistelmä:}\\ % Tiivistelmä / Referat
+Tutkielma käsittelee Dirichlet ongelmaa, jossa tavoitteena on laajentaa reuna-arvot määrittelevä funktio $n$-ulotteisesta Euklidisesta avaruudesta $n+1$-ulotteiseen puoliavaruuteen siten, että laajennus on harmoninen ja siten ratkaisee Laplacen yhtälön. Tätä kohti tutkielmassa edetään esittelmällä Fourier muunnos ja käyttämällä sitä avuksi Poisson ytimen johtamisessa. Poisson ydintä käytetään Poisson integraalin määrittämiseen, joka muodostaa eksplisiittisen muodon Dirichlet ongelman ratkaisulle, kun ratkottava osittaisdifferentaaliyhtälö on Laplacen yhtälö.
+
+Tutkielmassa on kaksi päätulosta. Näistä ensimmäinen todistaa, että Poisson integraali toteuttaa reuna-arvo ongelman kun reuna-arvot määräytyvät funktiosta, joka kuuluu $L^p$-avaruuteen. Tätä tulosta täydennetään lisätuloksella, jonka avulla voidaan näyttää, että ratkaisun suppeneminen noudattaa vahvempaa suppenemiskäsitettä silloin, kun reuna-arvot määrittävä funktio kuuluu tiukemmat säännöllisyysvaatimukset toteuttavaan funktiavaruuteen. Toinen tutkielman päätuloksista laajentaa ensimmäistä tulosta vastaavan tuloksen koskemaan myös ääreellisiä Borel mittoja. Tämä mahdollista monipuolisemman reuna-arvo datan käyttämisen reuna-arvo ongelmassa.
+
+Nämä tulokset antavat eksplisiittisen integrallimuodon funktiolle, joka ratkaisee halutun Dirichlet ongelman. Tulokset valottaa myös sitä miten harmoniset laajennukset käyttäytyvät, kun reuna-arvot määrittävän funktion säännöllisyydelle oletetaan erilaisia ehtoja. Lisäksi tämän kaltaisilla tuloksilla on sovelluksia monissa erilaisissa matematiikan ja fysiikan sovelluksissa. Tuloksia voidaan käyttää esimerkiksi osittaisdifferentaaliyhtälöiden analyysissä ja potentiaaliteoriassa. Työn lopussa käyn läpi vielä joitakin mahdollisia yleistyksiä, joihin tuloksia on mahdollista laajentaa.
+
+\vfill
+
+\noindent\textbf{Avainsanat:} Harmoninen analyysi, Osittaisdifferentaaliyhtälöt, Fourier analyysi % Avainsanat / Nyckelord
+
+\clearpage
 \noindent\textbf{Title:} Harmonic Extension at the Boundary of Half-Space\\ % Otsikko / Titel
 \textbf{Author:} Santeri Väätäjä\\ % Tekijä / Författare
-\textbf{Month and year:} Month and year of submission\\ % Aika / Datum
+\textbf{Month and year:} June 2025\\ % Aika / Datum
 \textbf{Page count:} \pageref*{LastPage}~pp.\\[1em] % Sivumäärä: XX~s. / Sidoantal: XX~s.
 % The page count is updated automatically, but it might require two compilations to be correct.
 % If you customize the backmatter, this might become incorrect - check and correct manually if needed.
@@ -89,13 +109,13 @@ Petri Ola\\
 % If you include an abstract in a different language, wrap it in a foreignlanguage block
 \begin{foreignlanguage}{english}
 \noindent\textbf{Abstract:}\\ % Tiivistelmä / Referat
-In this thesis, I will introduce results for the Dirichlet problem in the half-space. The goal is to extend a boundary value function to the whole of the half-space, so that it solves the Laplace equation, and thus is harmonic.
+In this thesis, I will introduce results for the Dirichlet problem in the Euclidean half-space. The goal is to extend a boundary value function from $n$-dimensional Euclidean space to the whole of the $n+1$-dimensional half-space, so that it solves the Laplace equation, and thus is harmonic.
 
-In order to show these results, I will first introduce some tools that are needed in the analysis of this problem, and are also useful in broader analysis. The main analytical tool used in this study is the Fourier transform. The Fourier transform is then used to derive the Poisson kernel, which provides an explicit harmonic expression for the extension of the boundary data in the form of a Poisson integral.
+I will first introduce some tools that are required for the analysis of this problem, and are also useful in the broader field of analysis. The main analytical tool used in this study is the Fourier transform. The Fourier transform is then used to derive the Poisson kernel, which provides an explicit harmonic expression for the extension of the boundary data in the form of a Poisson integral.
 
-The thesis presents two main results. The first of these proves that the Poisson integral can be used as an extension for a boundary function when it belongs to the $L^p$ space. Also, an extension of this result with stricter regularity assumptions on the function, which leads to a stronger notion of convergence, is presented. The second main result shows that a similar result also holds for finite Borel measures. This allows an even wider variety of data to be represented at the boundary.
+The thesis presents two main results. The first of these proves that the Poisson integral can be used as an extension of a boundary value function when it belongs to the $L^p$ space. An extension of this result with stricter regularity assumptions on the function, which leads to a stronger notion of convergence, is also presented. The second main result shows that a similar result also holds for finite Borel measures. This allows an even wider variety of data to be represented at the boundary of the half-space.
 
-These results provide an explicit solution to a boundary value problem for Laplace's equation, but also show how harmonic extensions behave under different regularity assumptions. These results have applications in a wide range of mathematical analysis, especially in partial differential equations, and in physics in the form of potential theory. In the end, I will highlight some of the possible ways these results could be extended to cover some generalized or slightly different settings.
+These results provide an explicit solution to a boundary value problem for Laplace's equation, but also show how harmonic extensions behave under different regularity assumptions. These results have applications in a wide range of mathematical analysis, especially in partial differential equations, and in physics in the form of potential theory. In the end, I will highlight some of the possible ways in which these results can be extended to cover some more generalized or slightly modified settings.
 \end{foreignlanguage}
 
 
@@ -104,24 +124,6 @@ These results provide an explicit solution to a boundary value problem for Lapla
 \noindent\textbf{Keywords:} Harmonic analysis, Partial differential equations, Fourier analysis % Avainsanat / Nyckelord
 
 \clearpage
-\noindent\textbf{Otsikko:} Harmoninen laajennus puoliavaruuteen\\ % Otsikko / Titel
-\textbf{Kirjoittaja:} Santeri Väätäjä\\ % Tekijä / Författare
-\textbf{Vuosi ja kuukausi:} Month and year of submission\\ % Aika / Datum
-\textbf{Sivumäärä:} \pageref*{LastPage}~s.\\[1em] % Sivumäärä: XX~s. / Sidoantal: XX~s.
-% The page count is updated automatically, but it might require two compilations to be correct.
-% If you customize the backmatter, this might become incorrect - check and correct manually if needed.
-
-% If you include an abstract in a different language, wrap it in a foreignlanguage block
-\noindent\textbf{Tiivistelmä:}\\ % Tiivistelmä / Referat
-Tutkielma käsittelee Dirichlet ongelmaa, jossa tavoitteena on laajentaa reuna-arvot määrittelevä funktio $n$-uloitteisesta avaruudesta $n+1$-ulotteiseen puoliavaruuteen siten, että laajennus on harmoninen ja siten ratkaisee Laplacen yhtälön. Tätä kohti tutkielmassa edetään esittelmällä Fourier muunnos ja käyttämällä sitä avuksi Poisson ytimen johtamisessa. Poisson ydintä käytetään Poisson integraalin määrittämiseen, joka muodostaa eksplisiittisen muodon Dirichlet ongelman ratkaisulle, kun ratkottava osittaisdifferentaaliyhtälö on Laplacen yhtälö.
-
-Tutkielmassa on kaksi päätulosta. Näistä ensimmäinen todistaa, että Poisson integraali toteuttaa reuna-arvo ongelman kun reuna-arvot määräytyvät funktiosta, joka kuuluu $L^p$-avaruuteen. Tätä tulosta täydennetään lisätuloksella, jonka avulla voidaan näyttää, että ratkaisun suppeneminen noudattaa vahvempaa suppenemiskäsitettä silloin, kun reuna-arvot määrittävä funktio kuuluu tiukemmat säännöllisyysvaatimukset toteuttavaan funktioluokkaan. Toinen tutkielman päätuloksista laajentaa ensimmäistä tulosta vastaavan tuloksen koskemaan myös ääreellisiä Borel mittoja. Tämä mahdollista monipuolisemman reuna-arvo datan käyttämisen reuna-arvo ongelmassa.
-
-Nämä tulokset antavat eksplisiittisen muodon ratkaisulle, joka ratkaisee halutun Dirichlet ongelman. Tulokset valottaa myös sitä miten harmoniset laajennukset käyttäytyvät, kun reuna-arvot määrittävän funktion säännöllisyydelle oletetaan erilaisia ehtoja. Lisäksi tämän kaltaisilla tuloksilla on sovelluksia monissa erilaisissa matematiikan ja fysiikan sovelluksissa. Tuloksia voidaan käyttää esimerkiksi osittaisdifferentaaliyhtälöiden analyysissä ja potentiaaliteoriassa. Työn lopussa käyn läpi vielä joitakin mahdollisia yleistyksiä, joihin tuloksia on mahdollista laajentaa.
-
-\vfill
-
-\noindent\textbf{Avainsanat:} Harmoninen analyysi, Osittaisdifferentaaliyhtälöt, Fourier analyysi % Avainsanat / Nyckelord
 
 %
 % TABLE OF CONTENTS
